--- a/style.css
+++ b/style.css
@@ -41,3 +41,45 @@ form button:hover {
   background: #d98767;
   color: white;
 }
+
+.to-do-container {
+  display: flex;
+  justify-content: center;
+  align-items:  center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  margin:  0.5rem;
+  background: white;
+  color:  black;
+  font-size: 1.5rem;
+  display:  flex;
+  justify-content:  space-between;
+  align-items:  center;
+}
+
+.todo li {
+  flex:  1;
+}
+
+.trash-btn,
+.complete-btn {
+  background:  burlywood;
+  color:  white;
+  border: none;
+  padding:  1rem;
+  cursor:  pointer;
+  font-size:  1 rem;
+}
+
+.complete-btn {
+ background: rgb(00, 222, 01);
+}
+.todo-item {
+  padding: 0rem 0.5rem;
+}
