--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ form button:hover {
   display:  flex;
   justify-content:  space-between;
   align-items:  center;
+  transition:  all 1s ease;
 }
 
 .todo li {
@@ -82,4 +83,50 @@ form button:hover {
 }
 .todo-item {
   padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+.fall {
+  transform: translate(8rem) rotate(20deg);
+  opacity:  0;
+}
+
+select {
+  -webkit-appearance:  none;
+  -moz-appearance:  none;
+  appearance:  none;
+  outline:  none;
+  border:  none;
+}
+
+.select {
+  margin:  1rem;
+  position: relative;
+  overflow:hidden;
+  padding: 1rem;
+}
+
+select {
+  color: #ff6f48;
+  width: 10rem;
+  cursor: pointer;
+  padding:  1rem;
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  background:  #ff6f47;
+  top:  0;
+  right: 0;
+  padding: 1rem;
+  pointer-events: none;
 }
